<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10pt"
            android:layout_marginLeft="10pt"
            android:layout_marginRight="10pt"
            android:gravity="center"
            android:text="@string/symbols"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10pt"
            android:layout_marginRight="10pt"
            android:text="@string/symbols_long_description"
            android:textSize="22sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10pt"
            android:layout_marginLeft="10pt"
            android:layout_marginRight="10pt"
            android:gravity="center"
            android:text="@string/numbers"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10pt"
            android:layout_marginRight="10pt"
            android:text="@string/numbers_long_description"
            android:textSize="22sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10pt"
            android:layout_marginLeft="10pt"
            android:layout_marginRight="10pt"
            android:gravity="center"
            android:text="@string/lowercase"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10pt"
            android:layout_marginRight="10pt"
            android:text="@string/lowercase_long_description"
            android:textSize="22sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10pt"
            android:layout_marginLeft="10pt"
            android:layout_marginRight="10pt"
            android:gravity="center"
            android:text="@string/uppercase"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10pt"
            android:layout_marginRight="10pt"
            android:text="@string/uppercase_long_description"
            android:textSize="22sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10pt"
            android:layout_marginLeft="10pt"
            android:layout_marginRight="10pt"
            android:gravity="center"
            android:text="@string/similar"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10pt"
            android:layout_marginRight="10pt"
            android:text="@string/similar_long_description"
            android:textSize="22sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10pt"
            android:layout_marginLeft="10pt"
            android:layout_marginRight="10pt"
            android:gravity="center"
            android:text="@string/ambiguous"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10pt"
            android:layout_marginRight="10pt"
            android:layout_marginBottom="10pt"
            android:text="@string/ambiguous_long_description"
            android:textSize="22sp" />
    </LinearLayout>
</ScrollView>